02-demo/00-preconfig/01-kyverno/tests/ntest.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod-bus-app1
  labels:
    purpose: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: toto-bus-app1
  labels:
    purpose: toto
