02-demo/00-preconfig/01-kyverno/tests/test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: alpine # good image but missing label
        command:
        - /bin/sh
        - -c 
        - |
          sleep infinity
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goldie-deployment
  labels:
    app: goldie
spec:
  replicas: 2
  selector:
    matchLabels:
      app: goldie
  template:
    metadata:
      labels:
        app: goldie
        bobinette: pull # good label
    spec:
      containers:
      - name: goldie
        image: ghcr.io/sphinxgaia/little-red-riding-hood-goldie-body:wolf # bad image
        ports:
        - containerPort: 80
